guestbook/frontend-guestbook-green.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: frontend-green
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
      version: green
  replicas: 3
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
        version: green
    spec:
      containers:
      - name: php-redis
        image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
