guestbook/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gb-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
spec:
  #tls:
  #- hosts:
  #  - vodafone.com
  #  secretName: my-vodafone-secret
  backend:
    serviceName: frontend-blue-service
    servicePort: 80
